--- a/_posts/2020-02-22-1st-Dojo.md
+++ b/_posts/2020-02-22-1st-Dojo.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title:  "第1回 CoderDojo Utsunomiya 開催！"
+title:  "【中止】第1回 CoderDojo Utsunomiya"
 date:   2020-03-02 00:00:01 +0900
 categories: dojo-notice
 image: assets/img/with_mentor.png
+excerpt: >-
+  第1回 CoderDojo Utsunomiya は、新型コロナ感染症の影響により中止とさせて頂きました。
+  ご了承ください。
 dojo_num:   1
 dojo_start: 2020-04-04 09:30:00 +0900
 dojo_end:   2020-04-04 11:30:00 +0900
@@ -12,106 +15,12 @@ dojo_fixed: true
 dojo_url: https://coderdojo-utsunomiya.doorkeeper.jp/events/104691
 ---
 
-宇都宮で初めての開催される CoderDojo です。
-運営サイドも初めてで不慣れなところがあるかもしれませんが、興味がある方はぜひご参加ください！
+<div markdown="1" class="uk-card uk-card-default uk-card-body">
 
-<a href="{{ page.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
+ {: .uk-text-large .uk-bolder .uk-text-danger}
+中止のお知らせ
 
-## コロナウィルス感染症対策について
+ {: .uk-bold .uk-text-danger}
+ {{ page.excerpt }}
 
-今のところ予定通り開催することを考えていますが、感染症の状況によっては急きょ中止の可能性があること、ご了承ください。
-随時状況を見て開催の是非を判断させて頂きます。
-
-
-## 内容
-
-PCやタブレットを使用して各自好きな作品を制作し、最後に発表を行います。
-
-例えば次のような制作をすることができます。
-
-* [Scratch][] でオリジナルゲームやビジュアル作品
-* [Hour Code][] でゲームのカスタマイズ
-* [Music Blocks][] で音楽作品
-* HTML / CSS を利用した Web ページ
-* Python を利用したゲーム
-
-これらはほんの一例です。
-何を作りたいかは各自でテーマを決めて取り組んで頂きます。
-Micro:Bit や LEGO MINDSTORMS、LEGO BOOST など、お手持ちのキットがあれば自由に持ち込んで作成制作して頂くことも可能です。
-
-
-運営側はメンターとしてみなさんの作品制作のお手伝いをします。
-通常のプログラミング教室とは違い、メンターは授業のようなことはしません。
-みなさんがやりたいことを見つけたり、課題を解決する為のお手伝いをします。
-
-## タイムテーブル
-
-|  9:30 | オリエンテーション
-|  9:40 | 作品制作開始
-| 11:00 | 発表
-| 11:25 | 写真撮影
-| 11:30 | 解散
-
-
-## 持ち物
-
-### 必須
-
-* インターネットに接続可能なPCまたはタブレット (1人1台)
-
-PCやタブレットの貸出は行っておりません。
-1人1台準備するようお願いいたします。
-
-### 推奨 (ご協力のお願い)
-
-* ポータブルWiFiやテザリング可能なスマートホン
-* 電源延長コード
-
-会場に常設のWiFi環境は無いので、ポータブルWiFiを運営側で1台用意する予定です。
-ただし、最大接続台数が10台と限られているので、極力みなさんで準備頂けると助かります。
-
-また、電源コードも数が限られているので、ご協力頂けると助かります。
-
-
-## 事前準備
-
-可能な限りやりたいことをあらかじめ考えてきてください。
-
-次のような資料が参考になるでしょう。
-
-* [Scratch プログラミング入門 by CoderDojo紙屋町][Kamiya-cho PDF]
-* [Scratch 公式チュートリアル][Scratch Tutorial]
-* [Hour Code][]
-* [はじめてのWebサイト](http://www.coderdojo-hiroshima.com/My_first_website_ja.pdf)
-* (参考) [ローマ字表](https://happylilac.net/roman-hyo2.pdf)
-
-プログラミングが初めてで、何ができるか、何をすればよいか分からない場合、[Scratch プログラミング入門 by CoderDojo紙屋町][Kamiya-cho PDF]から始めることをおすすめします。
-
-[Scratch][]を利用する場合、[デスクトップ版 Scratch][Scratch Desktop]をあらかじめインストールしておくと、ネットワーク環境に左右されないのでオススメです。
-
-
-## 参加申し込み
-
-中学生以下の参加者は、必ず保護者が申し込みをしてください。
-1名の保護者につき、複数の子どもの申し込みを行うことができます。
-
-システムの都合上、申し込み直後はキャンセル待ち状態となります。
-その後、運営側が参加を承認すると、メールでご連絡が行く形となります。
-
-原則、先着順での受付となりますが、会場の収容可能人数の関係で希望されるお子様の数を収容できない場合など、運営側で調整させて頂く場合がありますのでご了承ください。
-
-<a href="{{ page.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
-
-
-## お願い
-
-小学生以下の参加者は、必ず保護者の方が送迎をお願いいたします。
-（イベント中は必ずしも同席される必要はございません）
-
-
-[Scratch]: https://scratch.mit.edu/
-[Scratch Desktop]: https://scratch.mit.edu/download
-[Scratch Tutorial]: https://scratch.mit.edu/ideas
-[Hour Code]: https://hourofcode.com/jp/learn
-[Music Blocks]: https://musicblocks.sugarlabs.org/
-[Kamiya-cho PDF]: https://www.coderdojo-hiroshima.com/wp-content/uploads/2019/01/coderdojo-kamiyacho-beginner.pdf
+</div>
