--- a/_posts/2020-02-22-2nd-Dojo.md
+++ b/_posts/2020-02-22-2nd-Dojo.md
@@ -1,8 +1,11 @@
 ---
 layout: post
-title:  "第2回 CoderDojo Utsunomiya 計画中"
+title:  "【中止】第2回 CoderDojo Utsunomiya 計画中"
 date:   2020-03-02 00:00:00 +0900
 categories: dojo-notice
+excerpt: >-
+  5月の CoderDojo Utsunomiya は、新型コロナ感染症の影響により中止とさせて頂きました。
+  ご了承ください。
 dojo_num:   2
 dojo_start: 2020-05-01 09:30:00 +0900
 dojo_end:   2020-05-01 11:30:00 +0900
@@ -10,4 +13,12 @@ dojo_place: 宇都宮まちづくりセンター (仮)
 dojo_fixed: false
 ---
 
-5月中旬ごろを予定しています。
+<div markdown="1" class="uk-card uk-card-default uk-card-body">
+
+ {: .uk-text-large .uk-bolder .uk-text-danger}
+中止のお知らせ
+
+ {: .uk-bold .uk-text-danger}
+ {{ page.excerpt }}
+
+</div>
