Support a responsive for Google Map

--- a/_posts/2020-05-31-1st-Dojo.md
+++ b/_posts/2020-05-31-1st-Dojo.md
@@ -47,9 +47,9 @@ dojo_url: https://forms.gle/FVk5vKBY7867kjqBA
 
 {{ page.dojo_place | markdownify }}
 
-<p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1602.368345526809!2d139.910926!3d36.5604613!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xa093a5ce5a95813b!2z5a6H6YO95a6u5biCIOOBvuOBoeOBpeOBj-OCiuOCu-ODs-OCv-ODvA!5e0!3m2!1sja!2sjp!4v1591151384244!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</p>
+<div class="uk-container">
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1602.368345526809!2d139.910926!3d36.5604613!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xa093a5ce5a95813b!2z5a6H6YO95a6u5biCIOOBvuOBoeOBpeOBj-OCiuOCu-ODs-OCv-ODvA!5e0!3m2!1sja!2sjp!4v1591151384244!5m2!1sja!2sjp" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
 
 
 ## 内容
