--- a/_posts/2020-07-11-2nd-Dojo.md
+++ b/_posts/2020-07-11-2nd-Dojo.md
@@ -14,7 +14,7 @@ dojo_end:   2020-07-11 11:35:00 +0900
 dojo_place: 宇都宮まちづくりセンター
 dojo_place_link: https://goo.gl/maps/MKjPn5qdppgqykiM9
 dojo_fixed: true
-dojo_url: https://forms.gle/FVk5vKBY7867kjqBA
+dojo_url: https://forms.gle/SBkamYJqMjjdsqYf6
 ---
 
 <div markdown="1" class="uk-card uk-card-default uk-card-body uk-text-danger">
