Add application form for 3rd Dojo

--- a/_posts/2020-08-01-3rd-Dojo.md
+++ b/_posts/2020-08-01-3rd-Dojo.md
@@ -5,7 +5,7 @@ date:   2020-06-21 00:00:01 +0900
 categories: dojo-notice
 image: assets/img/with_mentor.png
 excerpt: >-
-  第3回 CoderDojo Utsunomiya を開催予定です。
+  第3回 CoderDojo Utsunomiya を開催します。
   場所は前回と同じ 宇都宮まちづくりセンター です。
 dojo_num:   3
 dojo_start: 2020-08-01 09:30:00 +0900
@@ -13,7 +13,7 @@ dojo_end:   2020-08-01 11:35:00 +0900
 dojo_place: 宇都宮まちづくりセンター
 dojo_place_link: https://goo.gl/maps/MKjPn5qdppgqykiM9
 dojo_fixed: true
-# dojo_url: https://forms.gle/FVk5vKBY7867kjqBA
+dojo_url: https://forms.gle/ziQvKFeZY1Q48eGc6
 ---
 
 {{ page.excerpt | markdownify }}
