Update post of 3rd Dojo

--- a/_posts/2020-08-01-3rd-Dojo.md
+++ b/_posts/2020-08-01-3rd-Dojo.md
@@ -16,6 +16,30 @@ dojo_fixed: true
 dojo_url: https://forms.gle/ziQvKFeZY1Q48eGc6
 ---
 
+<div markdown="1" class="uk-card uk-card-default uk-card-body uk-text-danger">
+
+ {: .uk-text-large .uk-bolder}
+**【重要】新型コロナ感染症対策について**
+
+新型コロナ感染症対策の為、参加頂くみなさまには、 **大人・子ども・スタッフ含め全員** 次の対策をお願いいたします。
+
+- 当日の検温
+- マスクの着用
+- 入口での手指の消毒
+
+当日、熱が 37.5 ℃以上ある、またはせきの症状がある方はご参加できません。
+対策が不十分であったり症状がある方は、安全上の理由によりご入場をお断りさせて頂きますので、何卒ご理解の程よろしくお願いいたします。
+
+会場は次の感染症対策を行います。
+
+- 参加可能人数は会場の定員の半分 (18名) まで
+- 作業机は壁ぎわに配置し、壁方向を向いて作業する
+
+万が一感染症が発生した場合にご連絡できるよう、申し込み時にご連絡先 (メールアドレスと電話番号) をご提供頂いております。
+感染症対策の目的で行政から要求があった場合、お預かりしている個人情報 (保護者及びお子様のお名前、メールアドレス、電話番号) を提供することがあることをご理解くださいますよう、よろしくお願いいたします。
+
+</div>
+
 {{ page.excerpt | markdownify }}
 
 {% if page.dojo_fixed and page.dojo_url %}
