Open a form of 5th Dojo

--- a/_posts/2020-11-10-5th-Dojo.md
+++ b/_posts/2020-11-10-5th-Dojo.md
@@ -12,7 +12,7 @@ dojo_end:   2020-12-20 11:35:00 +0900
 dojo_place: 宇都宮まちづくりセンター
 dojo_place_link: https://goo.gl/maps/MKjPn5qdppgqykiM9
 dojo_fixed: true
-dojo_url:
+dojo_url: https://forms.gle/X8pmFZecPWfchq9B8
 ---
 
 <div markdown="1" class="uk-card uk-card-default uk-card-body uk-text-danger">
