--- a/_posts/2020-11-10-5th-Dojo.md
+++ b/_posts/2020-11-10-5th-Dojo.md
@@ -4,16 +4,32 @@ title:  第5回 CoderDojo Utsunomiya 開催
 categories: dojo-notice
 image: assets/img/with_mentor.png
 excerpt: >-
-  第5回 CoderDojo Utsunomiya を開催します。
-  場所は前回と同じ 宇都宮まちづくりセンター です。
+  第5回 CoderDojo Utsunomiya は新型コロナ感染症の感染拡大を受けて急きょ中止させて頂きます。
 dojo_num:   5
 dojo_start: 2020-12-20 09:30:00 +0900
 dojo_end:   2020-12-20 11:35:00 +0900
 dojo_place: 宇都宮まちづくりセンター
 dojo_place_link: https://goo.gl/maps/MKjPn5qdppgqykiM9
 dojo_fixed: true
-dojo_url: https://forms.gle/X8pmFZecPWfchq9B8
+dojo_url:
+dojo_apply_closed: true
 ---
+
+<div markdown="1" class="uk-card uk-card-default uk-card-body uk-text-danger">
+
+ {: .uk-text-large .uk-bolder}
+**(12/13 更新) 開催中止のお知らせ**
+
+12/10 から栃木県の警戒度レベルが「感染厳重注意」に引き上げられております ([栃木県サイト](http://www.pref.tochigi.lg.jp/e04/welfare/hoken-eisei/kansen/hp/corona_gaiyo.html))。
+
+これを受けまして、急きょ第5回 CoderDojo 宇都宮の開催を中止させて頂く判断をしました。
+楽しみにされていた方には、大変申し訳ございません。
+
+なお今後の開催の是非につきましては，栃木県発表の警戒度レベルが「感染拡大注意」以下であれば開催させて頂こうと考えております．
+新型コロナ感染症の状況を見ながら，1月以降も開催を予定させていただきますので，またお申込み頂けますと幸いです．
+
+今後の情報は、当[Webサイト](/) または [Facebook](https://www.facebook.com/coderdojo.utsunomiya) 等でお知らせします。
+</div>
 
 <div markdown="1" class="uk-card uk-card-default uk-card-body uk-text-danger">
 
@@ -44,7 +60,7 @@ dojo_url: https://forms.gle/X8pmFZecPWfchq9B8
 {% if page.dojo_fixed and page.dojo_url %}
 <a href="{{ page.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
 {% else %}
-参加申込は後日オープン予定です。<br>
+参加申込受け付けは終了しました。<br>
 <button class="uk-button uk-button-primary" disabled>参加申し込みはこちら</button>
 {% endif %}
 
@@ -140,7 +156,7 @@ PCやタブレットの貸出は行っておりません。
 {% if page.dojo_fixed and page.dojo_url %}
 <a href="{{ page.dojo_url }}"><button class="uk-button uk-button-primary">参加申し込みはこちら</button></a>
 {% else %}
-参加申込は後日オープン予定です。<br>
+参加申込み受け付けは終了しました。<br>
 <button class="uk-button uk-button-primary" disabled>参加申し込みはこちら</button>
 {% endif %}
 
