--- a/_posts/2022-02-26-5th-Dojo.md
+++ b/_posts/2022-02-26-5th-Dojo.md
@@ -14,7 +14,7 @@ dojo_end:   2022-03-13 12:00:00 +0900
 dojo_place: オンライン
 dojo_place_link:
 dojo_fixed: true
-dojo_url:
+dojo_url: https://forms.gle/webdufsCPfkX6dqx8
 dojo_apply_closed: false
 ---
 
