Close apply form for 5th Dojo

--- a/_posts/2022-02-26-5th-Dojo.md
+++ b/_posts/2022-02-26-5th-Dojo.md
@@ -15,7 +15,7 @@ dojo_place: オンライン
 dojo_place_link:
 dojo_fixed: true
 dojo_url: https://forms.gle/webdufsCPfkX6dqx8
-dojo_apply_closed: false
+dojo_apply_closed: true
 ---
 
 {{ page.excerpt | markdownify }}
